--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
     "vite-plugin-css-injected-by-js": "^3.5.2",
     "vue": "^3.5.24",
     "vue-tsc": "^3.1.4"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
