--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "vue": "^3.5.24",
     "vue-tsc": "^3.1.4"
   },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "msw"
+    ]
+  },
   "msw": {
     "workerDirectory": [
       "public"
