--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     }
   },
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
