Update workflow to only install Chromium

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,8 +20,8 @@ jobs:
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-      - name: Install Playwright Browsers
-        run: pnpm exec playwright install --with-deps
+      - name: Install Playwright Chromium only
+        run: pnpm exec playwright install chromium --with-deps
       - name: Run Playwright tests
         run: pnpm test
       - uses: actions/upload-artifact@v4
